<resources>
    <string name="app_name">HelpingEye</string>
    <string name="todo1">TODO</string>
    <string name="signupmainpage">SignUp</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="record_your_voice">Record your Voice</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="desc">your desc goes here</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_password">Enter Password</string>

    <string name="do_you_have_already_an_account">Do you have already an account?</string>
    <string name="signup">SignUp</string>
    <string name="todologinimage">TODO</string>
    <string name="select_photo">Select Photo</string>
    <string name="signuppagebtn">SignUp</string>
    <string name="i_agree_to_the_term_of_service">I agree to the Term of Service</string>
    <string name="todo2">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="obstacle_detector">Obstacle Detector</string>
    <string name="contact">Contact</string>
    <string name="obstacle_detection">Obstacle Detection</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="alarm">Alarm</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_home_page_nav">HomePageNavActivity</string>

</resources>
