<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_obst_dtctr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/obstacle_detector" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/alarm" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/location" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
