<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.SignUpActivity"
    android:background="@drawable/gradiant_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relatielayoutone"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_text_input"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/fullnamelogo"
                android:textSize="15sp"
                android:hint="@string/full_name"
                android:layout_marginStart="10dp"
                android:drawableStart="@drawable/fullnamelogo" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relatielayouttwo"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/envelope"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/envelope"
                android:layout_marginStart="10dp" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relatielayoutthree"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/password_text_input"
                android:layout_alignEnd="@+id/password_text_input"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/lock"
                android:hint="@string/password"
                android:textSize="15sp"
                android:layout_alignRight="@+id/password_text_input"
                android:layout_marginStart="10dp"
                android:drawableStart="@drawable/lock" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relatielayoutfour"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phonenumber_text_input"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/phonenumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phonenumberlogo"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/phonenumberlogo"
                android:layout_marginStart="10dp" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relatielayoutfive"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Address_text_input"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/AddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/addresslogo"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:hint="@string/address"
                android:layout_marginStart="10dp" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/selectPhotoLL"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/camera"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/SelectPhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:longClickable="true"
            android:text="Select Photo"
            android:layout_weight="0.9"
            android:layout_marginEnd="20dp" />
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:elevation="15dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary">
        <Button
            android:id="@+id/signupTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SignUp"
            android:layout_gravity="center"
            android:background="@color/colorTranparent"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </android.support.v7.widget.CardView>


</LinearLayout>
</ScrollView>